--- a/chapter4.tex
+++ b/chapter4.tex
@@ -85,7 +85,7 @@ Faster R-CNN is a region-based CNN, employing \textit{Region Proposal Networks} 
 \end{figure}
 The Region Proposal Network takes an image of any size as inputs, feeding it through convolutional layers to generate feature maps. The area of activation is then fed into the RPN, which outputs object proposals in the form of rectangular regions, each with a objectness score. The objectness score is a measure of membership to a set of object classes versus background. The rectangular regions are subsequently fed into the classification layers where the classification score is obtained. In their paper, Ren et al. investigated two models for the classification network, the 5 convolutional layer deep Zeiler and Fergus model \cite{Zeiler2014} dubbed ZF-net, and the 16 convolutional layer deep Simonyan and Zisserman model \cite{VGG16}, dubbed VGG-16. In this project, the VGG-16 model is used, as this network achieved the best results in the Master thesis work of Tangstad \cite{tangstad}.
 \subsection{Training and validation data}
-Describe the datasets used in training and validation (Espen Tangstads work basically) \todo{Ikke ferdig}
+The network used in the project is the best-performing model developed in Tangstads thesis work \cite{tangstad}. This model is trained as a single-class classifier, 
 \subsection{Implementation Aspects}
 A complete MATLAB implementation of Faster R-CNN is available on Github. In order to run Faster R-CNN, there are some software requirements that need to be met. The steps are listed in the Github repository for the framework \cite{faster_rcnn_git}, and will be repeated here for convenience. The steps are setup-dependent, depending on whether or not the framework will be executing on a GPU or a CPU, and also on the version of GPU used. The Faster R-CNN implementation available at the Github repository uses Caffe \cite{jia2014caffe}, which is a deep-learning framework utilizing Nvidia CUDA for parallel computing, developed by Berkeley AI Research. Caffe is well documented online, with installation instructions, tutorials and more \cite{caffe}. 
 
