--- a/docsetup.tex
+++ b/docsetup.tex
@@ -8,6 +8,7 @@
 \usepackage{todonotes}
 \usepackage{gensymb}
 \usepackage{subcaption}
+\usepackage[utf8]{inputenc}
 \usepackage{listings}
 \usepackage{interval}
 \usepackage{colortbl}
