--- a/frontpage.tex
+++ b/frontpage.tex
@@ -2,7 +2,7 @@
 %\includegraphics[scale=1.1]{fig/rams}
 \mbox{}\\[0pc]
 \begin{center}
-\Huge{Fusion of lidar and Camera for Collision Avoidance Purposes}\\[2pc]
+\Huge{Fusion of Lidar and Camera for Collision Avoidance Purposes}\\[2pc]
  
 \Large{Vegard Kamsv\aa g}\\[1pc]
 \large{December 2017}\\[2pc]
