--- a/list.tex
+++ b/list.tex
@@ -2,10 +2,10 @@
 \addcontentsline{toc}{chapter}{Table of Contents}
 \clearpage
 
-\listoftables
-\addcontentsline{toc}{chapter}{List of Tables}
-\clearpage
+%\listoftables
+%\addcontentsline{toc}{chapter}{List of Tables}
+%\clearpage
 
-\listoffigures									
-\addcontentsline{toc}{chapter}{List of Figures}
-\clearpage
+%\listoffigures									
+%\addcontentsline{toc}{chapter}{List of Figures}
+%\clearpage
