--- a/main.tex
+++ b/main.tex
@@ -31,8 +31,9 @@
 \input{chapter8.tex}
 %% PART 4
 %\input{references.tex}	%% Edit your references in "mylib.bib"
-\printbibliography
 \appendix
 \chapter{Appendix}
-\input{appendix.tex}		%% Optional
+\input{appendix.tex}
+\printbibliography
+		%% Optional
 \end{document}
