--- a/mylib.bib
+++ b/mylib.bib
@@ -476,9 +476,6 @@ publisher = {Curran Associates, Inc.},
 	volume = {27},
 	number = {6},
 	publisher = {Wiley Subscription Services, Inc., A Wiley Company},
-	issn = {1556-4967},
-	url = {http://dx.doi.org/10.1002/rob.20367},
-	doi = {10.1002/rob.20367},
 	pages = {790--818},
 	year = {2010},
 }
@@ -490,9 +487,6 @@ publisher = {Curran Associates, Inc.},
 	volume = {27},
 	number = {6},
 	publisher = {Wiley Subscription Services, Inc., A Wiley Company},
-	issn = {1556-4967},
-	url = {http://dx.doi.org/10.1002/rob.20371},
-	doi = {10.1002/rob.20371},
 	pages = {819--833},
 	year = {2010},
 }
@@ -504,15 +498,133 @@ publisher = {Curran Associates, Inc.},
 	volume = {28},
 	number = {1},
 	publisher = {Wiley Subscription Services, Inc., A Wiley Company},
-	issn = {1556-4967},
-	url = {http://dx.doi.org/10.1002/rob.20380},
-	doi = {10.1002/rob.20380},
 	pages = {3--18},
 	year = {2011},
 }
 
+@article {ROB:ROB20312,
+	author = {Premebida, Cristiano and Ludwig, Oswaldo and Nunes, Urbano},
+	title = {LIDAR and vision-based pedestrian detection system},
+	journal = {Journal of Field Robotics},
+	volume = {26},
+	number = {9},
+	publisher = {Wiley Subscription Services, Inc., A Wiley Company},
+	pages = {696--711},
+	year = {2009},
+}
 
+@article{STILLER2000389,
+	title = "Multisensor obstacle detection and tracking",
+	journal = "Image and Vision Computing",
+	volume = "18",
+	number = "5",
+	pages = "389 - 396",
+	year = "2000",
+	author = "C. Stiller and J. Hipp and C. Rössig and A. Ewald",
+	keywords = "Multisensor obstacle detection and tracking, Stereo vision, Laser scanner, Driver assistance, Autonomous driving"
+}
+
+@inproceedings{Monteiro2006TrackingAC,
+	title={Tracking and Classification of Dynamic Obstacles Using Laser Range Finder and Vision},
+	author={Gonçalo Monteiro and Cristiano Premebida and Paulo Peixoto and Urbano Nunes},
+	year={2006}
+}
+
+@article{Aufrere,
+	title = "Perception for collision avoidance and autonomous driving",
+	journal = "Mechatronics",
+	volume = "13",
+	number = "5",
+	pages = "1149 - 1161",
+	year = "2003",
+	author = "R. Aufr\`{e}re and J. Gowdy and C. Mertz and C. Thorpe and C. Wang and T. Yata",
+	keywords = "Perception for collision avoidance and autonomous driving"
+}
+
+@inproceedings{Cho_multisensor_fusion, 
+	author={H. Cho and Y. W. Seo and B. V. K. V. Kumar and R. R. Rajkumar}, 
+	booktitle={2014 IEEE International Conference on Robotics and Automation (ICRA)}, 
+	title={A multi-sensor fusion system for moving object detection and tracking in urban driving environments}, 
+	year={2014}, 
+	volume={}, 
+	number={}, 
+	pages={1836-1843},  
+	month={May},}
+
+@inproceedings{levinson_towards_fully_autonomous, 
+	author={J. Levinson and J. Askeland and J. Becker and J. Dolson and D. Held and S. Kammel and J. Z. Kolter and D. Langer and O. Pink and V. Pratt and M. Sokolsky and G. Stanek and D. Stavens and A. Teichman and M. Werling and S. Thrun}, 
+	booktitle={2011 IEEE Intelligent Vehicles Symposium (IV)}, 
+	title={Towards fully autonomous driving: Systems and algorithms}, 
+	year={2011}, 
+	volume={}, 
+	number={}, 
+	pages={163-168}, 
+
+	ISSN={1931-0587}, 
+	month={June},}
+
+@inproceedings{weigel_vehicle_tracking, 
+	author={H. Weigel and P. Lindner and G. Wanielik}, 
+	booktitle={2009 IEEE Intelligent Vehicles Symposium}, 
+	title={Vehicle tracking with lane assignment by camera and lidar sensor fusion}, 
+	year={2009}, 
+	volume={}, 
+	number={}, 
+	pages={513-520}, 
+	month={June},}
+
+@INPROCEEDINGS{1356358, 
+	author={A. R. Jimenez and R. Ceres and F. Seco}, 
+	booktitle={Proceedings. Elmar-2004. 46th International Symposium on Electronics in Marine}, 
+	title={A laser range-finder scanner system for precise manoeuver and obstacle avoidance in maritime and inland navigation}, 
+	year={2004}, 
+	volume={}, 
+	number={}, 
+	pages={101-106}, 
+	month={June},}
+
+@inbook{Snyder_autonomous_river_navigation,
+	title = "Autonomous river navigation",
+	keywords = "3D Computer Vision, Autonomous Navigation, Detection, Multi-camera Stereo, Tracking",
+	author = "Snyder, {Franklin D.} and Morris, {Daniel D.} and Haley, {Paul H.} and Collins, {Robert T.} and Okerholm, {Andrea M.}",
+	year = "2004",
+	volume = "5609",
+	pages = "221--232",
+	editor = "D.W. Gage",
+	booktitle = "Proceedings of SPIE - The International Society for Optical Engineering",
 }
 
 
+@article{fusion_status_and_trends,
+	author = { Jixian   Zhang },
+	title = {Multi-source remote sensing data fusion: status and trends},
+	journal = {International Journal of Image and Data Fusion},
+	volume = {1},
+	number = {1},
+	pages = {5-24},
+	year  = {2010},
+	publisher = {Taylor & Francis},
+	
+}
+
+@INPROCEEDINGS{sensorfusion_spatio_temporal, 
+	author={M. Mahlisch and R. Schweiger and W. Ritter and K. Dietmayer}, 
+	booktitle={2006 IEEE Intelligent Vehicles Symposium}, 
+	title={Sensorfusion Using Spatio-Temporal Aligned Video and Lidar for Improved Vehicle Detection}, 
+	year={2006}, 
+	volume={}, 
+	number={}, 
+	pages={424-429}, 
+	month={},}
+
+@book{Siciliano:2007:SHR:1209344,
+	author = {Siciliano, Bruno and Khatib, Oussama},
+	title = {Springer Handbook of Robotics},
+	year = {2007},
+	isbn = {354023957X},
+	publisher = {Springer-Verlag New York, Inc.},
+	address = {Secaucus, NJ, USA},
+} 
+
+}
 %</bibtex>
